--- a/styles.css
+++ b/styles.css
@@ -125,8 +125,9 @@
 }
 
 .appearance-control-text {
-    font-size: 1.2rem;
+    /* font-size: 1.2rem; */
     margin-bottom: 2rem;
+    text-align: left;
 }
 
 .comparison-image {
